whitespace and delimiter fixes

--- a/charts/k8s-rocker/templates/secret.yaml
+++ b/charts/k8s-rocker/templates/secret.yaml
@@ -7,7 +7,7 @@ secrets:
       file: test/secrests/test.yaml
 */}}
 {{- with .Values.secrets }}
-{{ range $name, $secret:= . }}
+{{- range $name, $secret:= . }}
 {{ include "k8s-rocker.object" (list $ "v1" "Secret" $name $secret)
 }}
 stringData:
@@ -18,5 +18,6 @@ data:
   {{- range $key, $value:= $secret.binary}}
   {{ $key }}: |-{{ b64enc ($.Files.Get $value.file) | nindent 4 }}
   {{- end }}
+---
 {{- end }}{{/** end of range */}}
 {{- end }}{{/** end of .Values.secrets */}}
