--- a/charts/k8s-rocker/templates/volume.yaml
+++ b/charts/k8s-rocker/templates/volume.yaml
@@ -5,7 +5,7 @@ volumes:
     storage: '500Mi'
 */}}
 {{- with .Values.volumes }}
-{{ range $name, $volume:= . }}
+{{- range $name, $volume:= . }}
 {{ include "k8s-rocker.object" (list $ "v1" "PersistentVolumeClaim" $name $volume)
 }}
 spec:
