--- a/charts/k8s-rocker/templates/configmap.yaml
+++ b/charts/k8s-rocker/templates/configmap.yaml
@@ -7,12 +7,13 @@ configmaps:
       'key2': value2
 */}}
 {{- with .Values.configmaps }}
-{{ range $name, $configmap:= . }}
+{{- range $name, $configmap:= . }}
 {{ include "k8s-rocker.object" (list $ "v1" "ConfigMap" $name $configmap)
 }}
 data:
   {{- range $key, $value:= $configmap.data}}
   {{ $key }}: {{ $value }}
   {{- end }}
+---
 {{- end }}{{/** end of range */}}
 {{- end }}{{/** end of .Values.secrets */}}
