--- a/charts/k8s-rocker/templates/deployment.yaml
+++ b/charts/k8s-rocker/templates/deployment.yaml
@@ -12,17 +12,21 @@ deployment:
 
 */}}
 {{- with .Values.deployment }}
-{{ include "k8s-rocker.object" (list $ "v1" "Deployment" (include "k8s-rocker.name" $ ) .)
+{{ include "k8s-rocker.object" (list $ "apps/v1" "Deployment" (include "k8s-rocker.name"  $  ) .)
 }}
 spec:
   selector:
     matchLabels:
-      app: {{ include "k8s-rocker.name" $ }}
+    {{- include "k8s-rocker.matchLabels" (list $) | indent 6}}
   minReadySeconds: {{ default 0 .minReadySeconds }}
   strategy:
     type: {{ default "RollingUpdate" .strategy }}
   template:
+    metadata:
+      labels:
+      {{- include "k8s-rocker.matchLabels" (list $) | indent 8 }}
     spec:
+      restartPolicy: {{ default "Always" $.Values.deployment.restart}}
     {{- with $.Values.init }}
       initContainers:
       {{- range $name, $init := . }}
@@ -31,7 +35,7 @@ spec:
     {{- end }}
 
       containers:
-        {{- range $name, $container := $.Values.pod}}
+        {{- range $name, $container := $.Values.pod }}
         - {{- include "k8s-rocker.container" (list $ $name $container) | indent 10 }}
         {{- end }}
 
