--- a/charts/k8s-rocker/templates/tests/test-connection.yaml
+++ b/charts/k8s-rocker/templates/tests/test-connection.yaml
@@ -1,10 +1,3 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name:
-  labels:
-  annotations:
-    "helm.sh/hook": test
-spec:
-  containers:
+{{- with .Values.test }}
 # TODO
+{{- end}}
