--- a/charts/k8s-rocker/templates/configmap.yaml
+++ b/charts/k8s-rocker/templates/configmap.yaml
@@ -8,12 +8,11 @@ configmaps:
 */}}
 {{- with .Values.configmaps }}
 {{- range $name, $configmap:= . }}
-{{ include "k8s-rocker.object" (list $ "v1" "ConfigMap" $name $configmap)
-}}
+{{- include "k8s-rocker.object" (list $ "v1" "ConfigMap" $name $configmap) }}
 data:
   {{- range $key, $value:= $configmap.data}}
   {{ $key }}: {{ $value }}
   {{- end }}
 ---
 {{- end }}{{/** end of range */}}
-{{- end }}{{/** end of .Values.secrets */}}
+{{- end }}{{/** end of .Values.configmaps*/}}
