--- a/charts/k8s-rocker/test.yaml
+++ b/charts/k8s-rocker/test.yaml
@@ -1,9 +1,3 @@
-# features:
-# make everything optional, allowing secrets only etc
-#
-# TODO:
-# container.envFrom
-# -> https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#Container
 nameOverride: # defaults to .Chart.Name
 
 meta: # added to all objects
@@ -120,12 +114,14 @@ statefulset:
   strategy: 'RollingUpdate'
   minReadySeconds: # minimum ready seconds
 
-services:
-  meta:
-  'name':
-    port: 80
-    target: 80 # defaults to port
-    meta: # additional metadata
+service:
+  name: 'name'
+  type: 'ClusterIP'
+  port: 80
+  target: 80 # defaults to port
+  meta: # additional metadata
+    labels:
+      foo: bar
 
 ingress:
   'name':
