--- a/charts/k8s-rocker/test.yaml
+++ b/charts/k8s-rocker/test.yaml
@@ -84,7 +84,10 @@ pod: # the main pod
     mounts: # mounts
       volumes:
         'name':
-          path:
+          path: '/some/path'
+          readOnly: true
+          subPath: '.something'
+
       secrets:
       env: # TODO
       configmaps:
