minor path fixes

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -138,6 +138,6 @@ ingress:
     hosts:
       'host.of.app':
           '/':
-            type: 'ImplementationSpecific'
+            type: 'Prefix'
             to: 'servicename'
             port: 8080
