allow to specify version

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -1,5 +1,6 @@
 nameOverride: # defaults to .Chart.Name
 restart: "Always"
+version: # defaults to .Chart.Version
 
 meta: # added to all objects
   labels:
