--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -73,11 +73,11 @@ pod: # the main pod
         httpGet:
           port: 80
           path: '/'
-      ready: # a probe spec, passed raw
+      ready: # a probe spec, passed raw. defaults to live
         httpGet:
           port: 80
           path: '/ready'
-      start: # a probe spec, passed raw
+      start: # a probe spec, passed raw. defaults to live
         httpGet:
           port: 80
           path: '/start'
