set vim: filetype=go on all the files

--- a/charts/k8s-rocker/templates/_podspec.yaml
+++ b/charts/k8s-rocker/templates/_podspec.yaml
@@ -1,3 +1,6 @@
+{{- /* vim: filetype=go
+Defines a podspec
+*/}}
 {{- define "k8s-rocker.podspec" }}
 {{- $ := . }}
 restartPolicy: {{ default "Always" $.restart}}
