Adds filedData config to configMap

--- a/charts/k8s-rocker/templates/configmap.yaml
+++ b/charts/k8s-rocker/templates/configmap.yaml
@@ -13,6 +13,11 @@ data:
   {{- range $key, $value:= $configmap.data}}
   {{ $key }}: {{ $value }}
   {{- end }}
+filedData:
+  {{- range $key, $value:= $configmap.binary}}
+  {{ $key }}: |-{{ b64enc ($.Files.Get $value.file) }}
+  {{- end }}
+
 ---
 {{- end }}{{/** end of range */}}
 {{- end }}{{/** end of .Values.configmaps*/}}
