--- a/charts/k8s-rocker/templates/service.yaml
+++ b/charts/k8s-rocker/templates/service.yaml
@@ -1,10 +1,5 @@
-{{/** vim:filetype=go
-service:
-  name: 'name'
-  type: 'ClusterIp'
-  port: 80
-  target: 80 # defaults to port
-  meta:
+{{/**
+DEPRECATED, use the services array
 **/}}
 {{- with .Values.service }}
 {{- include "k8s-rocker.object" (list $ "v1" "Service" .name .) }}
@@ -16,3 +11,36 @@ spec:
   selector:
     {{- include "k8s-rocker.matchLabels" $ | indent 6 }}
 {{- end}}{{/** end of .Values.service **/}}
+---
+{{/** vim:filetype=go
+services:
+	'name':
+		type: 'ClusterIp'
+		port: 80
+		target: 80 # defaults to port
+		ports:
+			'name':
+				type: 'ClusterIp'
+				port: 80
+				target: 80 # defaults to port
+				protocol: 'TCP'
+		meta:
+**/}}
+{{- with .Values.services }}
+{{- range $key, $service := . }}
+{{- include "k8s-rocker.object" (list $ "v1" "Service" $key $service) }}
+spec:
+  type: {{ default "ClusterIP" .type }}
+  ports:
+  {{- range $key, $value := .ports }}
+    - name: {{ $key }}
+    {{- with $value }}
+      port: {{ required "service.port is required" .port }}
+      targetPort: {{ default .port .target }}
+      protocol: {{ default "TCP" .protocol }}
+      {{- end }}
+  {{- end }}
+  selector:
+    {{- include "k8s-rocker.matchLabels" $ | indent 6 }}
+{{- end}}{{/** end of service**/}}
+{{- end}}{{/** end of .values.services**/}}
