make sure mounts are not duplicating names

--- a/charts/k8s-rocker/templates/secret.yaml
+++ b/charts/k8s-rocker/templates/secret.yaml
@@ -10,6 +10,7 @@ secrets:
 {{- range $name, $secret:= . }}
 {{ include "k8s-rocker.object" (list $ "v1" "Secret" $name $secret)
 }}
+immutable: {{ default false .immutable }}
 stringData:
   {{- range $key, $value:= $secret.strings}}
   {{ $key }}: |-{{ $value | nindent 4 }}
