deprecate secret.binary and use files instead

--- a/charts/k8s-rocker/templates/secret.yaml
+++ b/charts/k8s-rocker/templates/secret.yaml
@@ -16,8 +16,12 @@ stringData:
   {{ $key }}: |-{{ $value | nindent 4 }}
   {{- end }}
 data:
+  {{- /* secret.binary is DEPRECATED */}}
   {{- range $key, $value:= $secret.binary}}
   {{ $key }}: |-{{ b64enc ($.Files.Get $value.file) | nindent 4 }}
+  {{- end }}
+  {{- range $key, $value:= $secret.files}}
+  {{ $key }}: |-{{ b64enc ($.Files.Get $value) | nindent 4 }}
   {{- end }}
 ---
 {{- end }}{{/** end of range */}}
