--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -27,11 +27,9 @@ secrets:
       'key': |
          some sting value
          possibly multiline
-    binary: # runs base64enc on the file and mounts it
-      'key2':
-        file: test/secrets/file.secret
-      'key3':
-        file: test/secrets/image.jpg
+    files:
+      'key2': test/secrets/file.secret
+      'key3': test/secrets/image.jpg
 
 configmaps:
   'name':
