rename configmap property to files, fix encoding

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -39,11 +39,9 @@ configmaps:
     data:
       'key': value
       'key2': value2
-    binary:
-      'key3':
-        file: test/configMap/test.yml
-      'key4':
-        file: test/configMap/img.png
+    files:
+      'key3': test/configMap/test.yml
+      'IMAGE': test/configMap/img.png
 
 pod: # the main pod
   'web':
