--- a/charts/k8s-rocker/templates/configmap.yaml
+++ b/charts/k8s-rocker/templates/configmap.yaml
@@ -15,8 +15,8 @@ data:
   {{ $key }}: |- {{ $value | nindent 4 }}
   {{- end }}
 binaryData:
-  {{- range $key, $value:= $configmap.binary}}
-  {{ $key }}: |-{{ $.Files.Get $value.file | nindent 4 }}
+  {{- range $key, $value:= $configmap.files}}
+  {{ $key }}: |-{{ b64enc ($.Files.Get $value) | nindent 4 }}
   {{- end }}
 
 ---
