--- a/charts/k8s-rocker/templates/secret.yaml
+++ b/charts/k8s-rocker/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{/* vim:filetype=go
+{{- /* vim:filetype=go
 secrets:
   'name':
     'key': |
@@ -24,5 +24,5 @@ data:
   {{ $key }}: |-{{ b64enc ($.Files.Get $value) | nindent 4 }}
   {{- end }}
 ---
-{{- end }}{{/** end of range */}}
-{{- end }}{{/** end of .Values.secrets */}}
+{{- end }}{{- /* end of range */}}
+{{- end }}{{- /* end of .Values.secrets */}}
