--- a/charts/k8s-rocker/templates/tests/test.yaml
+++ b/charts/k8s-rocker/templates/tests/test.yaml
@@ -1,4 +1,4 @@
-{{/* vim: filetype=go
+{{- /* vim: filetype=go
 */}}
 {{- with .Values.test }}
 apiVersion: v1
@@ -13,5 +13,4 @@ spec:
     - {{- include "k8s-rocker.container" (list $ $name $container) | indent 6 }}
 {{- end }}
   restartPolicy: Never
-
 {{- end }}
